bubba-frontend (1.2.4.80) claire estelle; urgency=low

  * Disable dhcp checkbox when dns-checkbox deactivated.

 -- PA Nilsson <pa@excito.com>  Tue, 09 Feb 2010 14:22:26 +0100

bubba-frontend (1.2.4.79ubuntu1) claire estelle; urgency=low

  * Fixed to disabale WAN dns/gw.

 -- PA Nilsson <pa@excito.com>  Tue, 09 Feb 2010 13:59:42 +0100

bubba-frontend (1.2.4.79) claire estelle; urgency=low

  * Set/remove promisc mode on eth1 when enable disable wlan. (Tempfix)
  * Extend timeout on bubba_socket_helper.php to not fail on long executions
  * Fixed to disable LAN dns/gw in server mode, closes# 1168.

 -- Tor Krill <tor@excito.com>  Mon,  8 Feb 2010 21:59:11 +0100

bubba-frontend (1.2.4.78) claire estelle; urgency=low

  * remove one shutdown of dnsmasq 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 08 Feb 2010 16:17:49 +0100

bubba-frontend (1.2.4.77) claire estelle; urgency=low

  * channels 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:48:26 +0100

bubba-frontend (1.2.4.76) claire estelle; urgency=low

  * whoopsie whoopsie 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:40:05 +0100

bubba-frontend (1.2.4.75) claire estelle; urgency=low

  * admin 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:35:46 +0100

bubba-frontend (1.2.4.74) claire estelle; urgency=low

  * disabling N and A 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:33:06 +0100

bubba-frontend (1.2.4.73) claire estelle; urgency=emergency

  * disabling N 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:20:46 +0100

bubba-frontend (1.2.4.72) estelle claire; urgency=low

  * prevent usage on passive scanning channel as well 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 16:31:37 +0100

bubba-frontend (1.2.4.71) estelle claire; urgency=low

  * change init of mediatromb to 26 from 20 (Closes: #1141) 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 12:38:49 +0100
